# parkour-api

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish.yaml
docs/: mp_thaw_config_sample.json5
docs/example/: base.curl.sh
docs/example/body/: config.json  event.json  map.json  route.json  score.json
scoreboard/: template.html
scoreboard/assets/: main.js  style.css
scripts/: get_players_count.js
src/: event.rs  log.rs  main.rs  map.rs  map_configuration.rs  persistence.rs  route.rs  scoreboard.rs  scores.rs
