[package]
name = "parkour-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.5"
parking_lot = "0.12.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.99" }
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }